welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:24: error: not found: value setColor
      setColor.tableauCouleur(5);
      ^Array1:25: error: not found: value baisseBrosser
      baisseBrosser();
      ^Array1:29: error: not found: value setColor
      setColor.tableauCouleur(i-1);
      ^Array1:30: error: not found: value baisseBrosser
      baisseBrosser();
      ^